--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [package]
-
 name = "glium-practice"
 version = "0.0.1"
 authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
+
+[dependencies.glium]
+git = "https://github.com/tomaka/glium"
+
+[dependencies.glutin]
+git = "http://github.com/tomaka/glutin"
