--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
 
 [dependencies.glium]
 git = "https://github.com/tomaka/glium"
+[dependencies.glium_macros]
+git = "https://github.com/tomaka/glium"
 
 [dependencies.glutin]
 git = "http://github.com/tomaka/glutin"
