--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ git = "https://github.com/tomaka/glium"
 git = "https://github.com/tomaka/glium"
 
 [dependencies.glutin]
-git = "http://github.com/tomaka/glutin"
+git = "https://github.com/tomaka/glutin"
