Split project into three
1.  Splitting project inth three (common, server, client)
2.  Configuring travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: rust
 install:
   - sudo apt-get install libXxf86vm-dev
+env:
+  - SUBDIR=common
+  - SUBDIR=server
+  - SUBDIR=client
+script: cd $SUBDIR && cargo build && cargo test
 notifications:
   irc:
     nick: glium-practice
