--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "res"]
-	path = res
+[submodule "client/res"]
+	path = client/res
 	url = https://github.com/simnalamburt/glium-practice-res.git
