--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,7 @@ path = "../common"
 
 [dependencies.glium]
 git = "https://github.com/tomaka/glium"
+default-features = false
 [dependencies.glutin]
 git = "https://github.com/tomaka/glutin"
 [dependencies.glium_macros]
