--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,8 @@ authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
 [dependencies]
 common = { path = "../common" }
 time = "*"
-glium = { version = "*", default-features = false }
-glutin = "*"
-obj-rs = { version = "*", features = ["glium-support"] }
+
+[dependencies.glium]
+version = "*"
+default-features = false
+features = ["glutin"]
