Use container-based infrastructure for travis
Reference:
  http://docs.travis-ci.com/user/workers/container-based-infrastructure

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: rust
-install:
-  - sudo apt-get install libXxf86vm-dev
+sudo: false
+addons:
+  apt:
+    packages:
+    - libXxf86vm-dev
 env:
   - SUBDIR=common
   - SUBDIR=server
