Don't use '*' in Cargo.toml

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,5 +5,5 @@ version = "0.0.1"
 authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
 
 [dependencies]
-rustc-serialize = "*"
-log = "*"
+rustc-serialize = "0.3"
+log = "0.3"
