--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,3 +10,4 @@ time = "0.1"
 xmath = { version = "0.2.2", features = ["glium-support"] }
 glium = { version = "0.8.2", default-features = false, features = ["glutin"] }
 rand = "0.3.9"
+obj-rs = { version = "0.4.12", features = ["glium-support"] }
