--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -3,6 +3,7 @@
 name = "client"
 version = "0.0.1"
 authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
+build = "build.rs"
 
 [dependencies]
 common = { path = "../common" }
