--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-
 name = "client"
 version = "0.0.1"
 authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
+edition = "2018"
+
 build = "build.rs"
 
 [dependencies]
