--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-
 name = "common"
 version = "0.0.1"
 authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 rustc-serialize = "0.3"
